--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node-uuid": "~1.4.1",
     "stylus": "~0.38.0",
     "nib": "~1.0.1",
-    "jade": "~0.35.0"
+    "jade": "~0.35.0",
+    "uglify-js": "latest"
   },
   "engines": {
     "node": "0.6.x"
